@@ -1,5 +1,6 @@
 Changes for 1.1.3:
 
+ - better calculation of next check timestamp for active items (Alexei)
  - fixed situations when latest_alarm() may return wrong value (Alexei)
  - remove left spaces from script full path (Alexei)
  - fixed Most Busy trigger report for multi-item triggers (Alexei)
